# InformSystem

./: .gitignore  01_shared_schemas.md  02_workflow_orchestration.md  05_database_schema.md  06_persistence_semantics_freeze.md  07_relevance_filtering_architecture_adjustment.md  08_current_phase_personal_tool_architecture.md  AGENTS.md  README.md  pyproject.toml
backend/app/: container.py  main.py
backend/app/core/: config.py  database.py
backend/app/shared/: __init__.py  models.py
backend/app/workflows/: __init__.py  models.py  orchestrator.py  profile_sync_orchestrator.py
docs/modules/: 10_ingestion_module.md  20_rule_engine_module.md  30_ai_processing_module.md  40_decision_engine_module.md  50_delivery_module.md  60_user_profile_module.md  70_config_module.md  80_feedback_module.md
docs/system/: 00_system_overview.md  02_workflow_orchestration.md  04_mock_and_integration_conventions.md  05_database_schema.md  09_rule_engine_slimming_adjustment.md  README.md
docs/thread_prompts/: 10_ingestion_thread_prompt.md  20_rule_engine_thread_prompt.md  30_ai_processing_thread_prompt.md  40_decision_engine_thread_prompt.md  50_delivery_thread_prompt.md  60_user_profile_thread_prompt.md  70_config_thread_prompt.md  80_feedback_thread_prompt.md  README.md
mocks/config/downstream_outputs/: ai_runtime_config.json  delivery_channel_configs.json  (+2 more)
mocks/ingestion/: source_configs.json
scripts/: demo_full_pipeline.py  demo_ingestion.py  demo_kimi_szu_board_pipeline.py  demo_szu_batch_probe.py  demo_szu_board_pipeline.py  probe_szu_board_for_user.py  run_system_demo.ps1
(+225 files in other folders)
